# easymem

./: README.md  pyproject.toml
easymem/: __init__.py  db.py  memory.py  message.py  records.py
easymem/base/: __init__.py  easymem.py  massivesearch.py  message.py  model.py  record.py
easymem/basic/: __init__.py  easymem.py  massivesearch.py  message.py  model.py  record.py
easymem/basic/msearch/: __init__.py  date.py  text.py
easymem/ext/: __init__.py
easymem/ext/qdrant/: __init__.py  easymem.py  massivesearch.py  message.py  model.py  qdrant.py
easymem/ext/qdrant/msearch/: __init__.py  base.py  date.py  vector.py
easymem/massivesearch/: __init__.py  base.py  datetime.py  vector.py
examples/: test.py
